--- a/app/src/main/res/layout/fragment_swarm1.xml
+++ b/app/src/main/res/layout/fragment_swarm1.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/swarm1"
     tools:context=".Swarm1">
 
     <LinearLayout
