--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/desk_name_text"
+        android:id="@+id/task_name_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -13,7 +13,7 @@
         android:textStyle="bold"
         android:gravity="center"/>
     <TextView
-        android:id="@+id/desk_time_text"
+        android:id="@+id/task_time_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -23,7 +23,7 @@
         android:gravity="center"
         />
     <TextView
-        android:id="@+id/desk_port_text"
+        android:id="@+id/task_port_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -32,7 +32,7 @@
         android:gravity="center"/>
 
     <Button
-        android:id="@+id/desk_del"
+        android:id="@+id/task_del"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="删除"/>
